2010-10-17 Jiri Olsa <olsajiri@gmail.com>
	* Artur Skawina <art.08.09@gmail.com>
		- enhancing names check with *-logic for
		  "-l -t -f -s -n -b" options

-------------------------------------------------------------------------------
latrace 0.5.10

2010-10-13 Jiri Olsa <olsajiri@gmail.com>
	* Artur Skawina <art.08.09@gmail.com>
		-  add '-n' option, allowing to omit tracing certain symbols
	* 0.5.10 release changes

2010-10-02 Jiri Olsa <olsajiri@gmail.com>
	* Akos Pasztory <akos.pasztory@gmail.com>
		- more sophisticated parsing of /proc/self/maps

2010-09-15 Jiri Olsa <olsajiri@gmail.com>
	* dynamic rlimit stack check
	* recognize [stack] map arrea and handle it properly
	* synchronize --no-* option names

2010-09-07 Jiri Olsa <olsajiri@gmail.com>
	* adding stack limits dynamic check
		- based on proposal from Akos Pasztory
		- enabled by default, disable by new '-Y' option

2010-08-05  Jiri Olsa <olsajiri@gmail.com>
	* changed config file magic defines
	* separate arguments display code, so it could be
	  disabled for not supported architectures
	* updating license info

2010-07-02  Jiri Olsa <olsajiri@gmail.com>
	* fixing output for thread applications
	  - proper tid displayed for pipe mode
	  - proper indentation for pipe mode

2010-06-03  Jiri Olsa <olsajiri@gmail.com>
	* changing permissions of libltaudit.so to 755

-------------------------------------------------------------------------------
latrace 0.5.9

2010-05-11  Jiri Olsa <olsajiri@gmail.com>
	* 0.5.9 release changes

2010-05-07  Jiri Olsa <olsajiri@gmail.com>
	* fix autoconf search for iberty lib
	* Akos Pasztory <akos.pasztory@gmail.com>
		- debian/rules made executable
		- check for libiberty_pic and libiberty in this order

2010-04-29  Jiri Olsa <olsajiri@gmail.com>
	* refactoring sysdep configuration

-------------------------------------------------------------------------------
latrace 0.5.8

2010-04-19  Jiri Olsa <olsajiri@gmail.com>
	* 0.5.8 release changes
