@@ -1,3 +1,9 @@
+2010-01-31 Jiri Olsa <olsajiri@gmail.com>
+	* adding support for global symbol config
+	  one global symbol tree to rule them all
+	    - only one tree is searched during the plt entry/exit
+	    - symbols are added during the bind audit callback
+
 2010-10-17 Jiri Olsa <olsajiri@gmail.com>
 	* Artur Skawina <art.08.09@gmail.com>
 		- enhancing names check with *-logic for
